--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,14 +6,14 @@
   loop_control:
     loop_var: link
 
-- name: Copy {{ item.src }} to {{ item.dest }}
+- name: Copy files
   copy:
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
   with_items:
     - "{{ copy_files }}"
 
-- name: Symlink {{ item.src }} to {{ item.dest }}
+- name: Symlink files
   file:
     state: link
     src: "{{ item.src }}"
